# hospital-maintenance-system

./: .gitignore  README.md  architecture.json  prd.md  test_patient_invalid_uuid.json  test_surge (1).ps1
backend/java/: .gitignore  build.gradle  pom.xml
backend/python/api/: pyproject.toml
backend/python/imageVideoBackend/: .gitignore  Dockerfile  img_video_config.py  isa_config.py  main.py  nixpacks.toml  requirements.txt
backend/python/orchestrator/: pyproject.toml
backend/python/ragBackend/: .gitignore  README.md  config.py  main.py  requirements.txt  test_rag_backend.py
backend/python/sarvam/: .env.example  README.md  config.py  main.py  requirements.txt
backend/python/unified/: config.py  main.py  requirements.txt  test_sarvam.py  test_unified.py  tts-gen.py
backend/python/worker/: pyproject.toml
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/Context/: AuthContext.tsx
frontend/app/auth/: page.tsx
frontend/components/: AddPatientModal.tsx  DashboardLayout.tsx  PatientTable.tsx  RecentActivity.tsx  RecentPatients.tsx  Sidebar.tsx  StatsRow.tsx  StatusDonut.tsx  TopBar.tsx
frontend/db/: hitl_migration.sql  policies_seed.sql  schema.sql  supabase_schema.sql
frontend/lib/: SseContext.tsx  api-client.ts  api.ts  constants.ts  data.ts  pythonApi.ts  simulation-engine.ts  socket-service.ts  sse-service.ts  supabase-api.ts  supabase-simulation.ts  supabaseClient.ts  types.ts  useSSE.ts  utils.ts  video-api-client.ts
frontend/supabase/: middleware.ts
(+183 files in other folders)
