[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "pdfminer>=20191125",
    "pydantic>=2.13.4",
    "redis>=8.0.0",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
